--- a/CRM/wwwroot/Student.html
+++ b/CRM/wwwroot/Student.html
@@ -7,7 +7,7 @@
     <link href="css/MasterResponsive.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/Master.css" />
     <link href="css/Student.css" rel="stylesheet" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="js/jquery.min.js"></script>
     <script src="js/Master.js"></script>
 
 
@@ -77,51 +77,196 @@
         <div class="main">
             <div class="register-container">
                 <h2>Create Account</h2>
-                <form action="/submit-registration" method="post">
-                    <div class="form-group">
-                        <label for="fullName">Full Name</label>
-                        <input type="text" id="fullName" name="fullName" required minlength="2" placeholder="e.g. John Doe">
+                <div class="form-container">
+                    <!-- College Detail Section -->
+                    <div class="section">
+                        <h2>Add New Student</h2>
+                        <div class="form‑row">
+                            <div class="form‑group">
+                                <label>Admission No.</label>
+                                <input type="text" name="admission_no" value="831128959440" />
+                            </div>
+                            <div class="form‑group">
+                                <label>Admission Date</label>
+                                <input type="date" name="admission_date" value="2025‑07‑26" />
+                            </div>
+                            <div class="form‑group">
+                                <label>Reg./Ex</label>
+                                <select name="reg_ex">
+                                    <option value="REGULER">REGULER</option>
+                                    <option value="EX">EX</option>
+                                </select>
+                            </div>
+                            <div class="form‑group">
+                                <label>New/Old</label>
+                                <select name="new_old">
+                                    <option value="NEW">NEW</option>
+                                    <option value="OLD">OLD</option>
+                                </select>
+                            </div>
+                            <div class="form‑group">
+                                <label>Year</label>
+                                <select name="year">
+                                    <option value="1 YEAR">1 YEAR</option>
+                                    <!-- add other years -->
+                                </select>
+                            </div>
+                            <div class="form‑group">
+                                <label>Class</label>
+                                <select name="class">
+                                    <option value="BBA">BBA</option>
+                                    <!-- add other class options -->
+                                </select>
+                            </div>
+                            <div class="form‑group">
+                                <label>Course</label>
+                                <select name="course">
+                                    <option value="MANAGEMENT">MANAGEMENT</option>
+                                    <!-- add more -->
+                                </select>
+                            </div>
+                            <div class="form‑group">
+                                <label>Sub. Code</label>
+                                <input type="text" name="sub_code" value="C029" />
+                            </div>
+                            <div class="form‑group">
+                                <label>EnRNo</label>
+                                <input type="text" name="enr_no" value="0" />
+                            </div>
+                            <div class="form‑group">
+                                <label>Roll No</label>
+                                <input type="text" name="roll_no" value="0" />
+                            </div>
+                            <div class="form‑group">
+                                <label>Scholar No</label>
+                                <input type="text" name="scholar_no" value="11496" />
+                            </div>
+                            <div class="form‑group">
+                                <label>Medium</label>
+                                <select name="medium">
+                                    <option value="HINDI">HINDI</option>
+                                    <option value="ENGLISH">ENGLISH</option>
+                                </select>
+                            </div>
+                        </div>
                     </div>
 
-                    <div class="form-group">
-                        <label for="email">Email Address</label>
-                        <input type="email" id="email" name="email" required placeholder="you@example.com">
+                    <!-- Student Detail Section -->
+                    <div class="section">
+                        <h2>Student’s Detail</h2>
+                        <div class="form‑row">
+                            <div class="form‑group">
+                                <label>Gender</label>
+                                <select name="gender">
+                                    <option value="MALE">MALE</option>
+                                    <option value="FEMALE">FEMALE</option>
+                                </select>
+                            </div>
+                            <div class="form‑group">
+                                <label>Caste</label>
+                                <select name="caste">
+                                    <option value="OBC">OBC</option>
+                                    <option value="GEN">GEN</option>
+                                    <option value="SC">SC</option>
+                                </select>
+                            </div>
+                            <div class="form‑group">
+                                <label>Student’s Name</label>
+                                <input type="text" name="student_name" value="AMAN VERMA" />
+                            </div>
+                            <div class="form‑group">
+                                <label>DOB</label>
+                                <input type="date" name="dob" value="2005‑07‑28" />
+                            </div>
+                            <div class="form‑group">
+                                <label>Father’s Name</label>
+                                <input type="text" name="father_name" value="RADHESHYAM VERMA" />
+                            </div>
+                            <div class="form‑group">
+                                <label>Mobile</label>
+                                <input type="tel" name="mobile" value="9522587973, 9399" />
+                            </div>
+                            <div class="form‑group">
+                                <label>Mother’s Name</label>
+                                <input type="text" name="mother_name" value="BASKANYA VERMA" />
+                            </div>
+                            <div class="form‑group">
+                                <label>ABC ID</label>
+                                <input type="text" name="abc_id" value="NO" />
+                            </div>
+                            <div class="form‑group">
+                                <label>Address</label>
+                                <input type="text" name="address" value="PANGRANA KHATI ICHHAWARE SEHORE" />
+                            </div>
+                            <div class="form‑group">
+                                <label>TC</label>
+                                <select name="tc">
+                                    <option value="NO">NO</option>
+                                    <option value="YES">YES</option>
+                                </select>
+                            </div>
+                            <div class="form‑group">
+                                <label>Aadhaar Card No.</label>
+                                <input type="text" name="aadhaar" value="556207545398" />
+                            </div>
+                            <div class="form‑group">
+                                <label>Minority</label>
+                                <select name="minority">
+                                    <option value="NO">NO</option>
+                                    <option value="YES">YES</option>
+                                </select>
+                            </div>
+                        </div>
                     </div>
 
-                    <div class="form-group">
-                        <label for="password">Password</label>
-                        <input type="password" id="password" name="password" required minlength="6" placeholder="6+ characters">
+                    <!-- Student Qualification Section -->
+                    <div class="section">
+                        <h2>Student’s Qualification</h2>
+                        <div class="form‑row">
+                            <div class="form‑group">
+                                <label>12th School Name OR Code</label>
+                                <input type="text" name="school_name_or_code" value="642080" />
+                            </div>
+                            <div class="form‑group">
+                                <label>Board</label>
+                                <select name="board">
+                                    <option value="MP BOARD BH">MP BOARD BH</option>
+                                    <!-- add more boards -->
+                                </select>
+                            </div>
+                            <div class="form‑group">
+                                <label>Passing Year</label>
+                                <input type="text" name="passing_year" value="2024" />
+                            </div>
+                            <div class="form‑group">
+                                <label>Max. Marks</label>
+                                <input type="number" name="max_marks" value="500" />
+                            </div>
+                            <div class="form‑group">
+                                <label>Obtain Marks</label>
+                                <input type="number" name="obtain_marks" value="289" />
+                            </div>
+                            <div class="form‑group">
+                                <label>Percentage</label>
+                                <input type="text" name="percentage" value="57.8" />
+                            </div>
+                            <div class="form‑group">
+                                <label>Result</label>
+                                <select name="result">
+                                    <option value="PASS">PASS</option>
+                                    <option value="FAIL">FAIL</option>
+                                </select>
+                            </div>
+                        </div>
                     </div>
 
-                    <div class="form-group">
-                        <label for="phone">Phone Number</label>
-                        <input type="tel" id="phone" name="phone" placeholder="+91 9876543210">
+                    <div class="actions">
+                        <button type="submit">Save</button>
+                        <button type="button">Add New Student</button>
+                        <button type="button">Cancel</button>
                     </div>
+                </div>
 
-                    <div class="form-group">
-                        <label for="dob">Date of Birth</label>
-                        <input type="date" id="dob" name="dob">
-                    </div>
-
-                    <div class="form-group">
-                        <label for="gender">Gender</label>
-                        <select id="gender" name="gender">
-                            <option value="">Select Gender</option>
-                            <option value="male">Male</option>
-                            <option value="female">Female</option>
-                            <option value="other">Other</option>
-                        </select>
-                    </div>
-
-                    <div class="form-group">
-                        <label for="address">Address</label>
-                        <input type="text" id="address" name="address" placeholder="Enter your address">
-                    </div>
-
-                    <div class="form-actions">
-                        <button type="submit">Register</button>
-                    </div>
-                </form>
             </div>
         </div>
     </div>
